--- a/ThesisCh/FrontFile/abstractCH.tex
+++ b/ThesisCh/FrontFile/abstractCH.tex
@@ -5,6 +5,6 @@
   % 此定位演算法對
 
   \vspace{1cm}
-  \noindent \textbf{關鍵字：室內定位、光定位、發光二極體、LED、光電二極體、定位演算法、朗博次方}
+  \noindent \textbf{關鍵字：室內定位、光定位、發光二極體、LED、光電二極體、定位演算法、最佳化}
 
 \end{abstractCH}
