--- a/ThesisCh/FrontFile/abstractEN.tex
+++ b/ThesisCh/FrontFile/abstractEN.tex
@@ -3,6 +3,6 @@
     With the development of IoT, the demand of sensors and data,especially positioning information, has increased drastically. Nowadays, indoor positioning systems mostly use multiple reference points in order to obtain position information. There is no efficient way to get 3-dimensional relative position with only two portable unit. Therefore, we start from introducing different positioning methods and techniques. According to the aforementioned demand, we focused on the positioning technique of using LEDs and photodiodes. Although this technique has the potential fulfill the needs, the majority of nowadays research have restricted usage scenario and system design. Particulary, they could only obtain 2-dimensional position while restricting transmitting and receiving planes to be parralel. As a result, we developed a positioning algorithm which can abtain 3-dimensional position without planes parralel assumption. Other than this, Lambertian order, hardware amound and hardware placing direction are not constrained either, which means the system has the ability to adjust with respect to different scenario. With this positioing algorithm, we further set up a simulation environment and a method to quantify system performance. In the simulation environment, we can evaluate system performance with different system design in different scenario. By evaluation method, the influence of each system design variable and noise simulation variable can be discussed. Aside from evaluation, we also proposed a optimization method to take system design as variable and in specific scenario. Overall, we proposed a 3-dimensional positioning algorithm without parallel planes assumption while considering Lambertian order, hardware amount and placing orientation as variable. Except for positioning algorithm, the simulation environment and optimization method provide users a very a guide to construct the hardware system. 
 
     \vspace{1cm}
-    \noindent \textbf{Key Words：Indoor Positioning, Light Positioning, Light-Emitting-Diode, Photodiode, Positioning Algorithm, Lambertian Order}
+    \noindent \textbf{Key Words：Indoor Positioning, Light Positioning, Light-Emitting-Diode, Photodiode, Positioning Algorithm, Lambertian Order, Optimization}
 
 \end{abstractEN}
