--- a/ThesisCh/thesis.tex
+++ b/ThesisCh/thesis.tex
@@ -1,9 +1,10 @@
-%!TEX encoding = UTF-8 Unicode
+
 \documentclass[a4paper, 12pt, oneside]{book}
 
 \input{PackageSetting}
 \input{XeCJKsetting}
 
+% \usepackage{notoccite}
 \usepackage{longtable}
 \usepackage{caption}
 \usepackage{siunitx,array,multirow}
