--- a/ThesisCh/FrontFile/abstractEN.tex
+++ b/ThesisCh/FrontFile/abstractEN.tex
@@ -1,6 +1,6 @@
 \begin{abstractEN}
 
-    With the development of IoT, the demand of sensors and data,especially positioning information, has increased drastically. Nowadays, indoor positioning systems mostly use multiple reference points in order to obtain position information. There is no efficient way to get 3-dimensional relative position with only two portable unit. Therefore, we start from introducing different positioning methods and techniques. According to the aforementioned demand, we focused on the positioning technique of using LEDs and photodiodes. Although this technique has the potential fulfill the needs, the majority of nowadays research have restricted usage scenario and system design. Particulary, they could only obtain 2-dimensional position while restricting transmitting and receiving planes to be parralel. As a result, we developed a positioning algorithm which can abtain 3-dimensional position without planes parralel assumption. Other than this, Lambertian order, hardware amound and hardware placing direction are not constrained either, which means the system has the ability to adjust with respect to different scenario. With this positioing algorithm, we further set up a simulation environment and a method to quantify system performance. In the simulation environment, we can evaluate system performance with different system design in different scenario. By evaluation method, the influence of each system design variable and noise simulation variable can be discussed. Aside from evaluation, we also proposed a optimization method to take system design as variable and in specific scenario. Overall, we proposed a 3-dimensional positioning algorithm without parallel planes assumption while considering Lambertian order, hardware amount and placing orientation as variable. Except for positioning algorithm, the simulation environment and optimization method provide users a very a guide to construct the hardware system. 
+    The development of the Internet of Things(IoT) increases the demand of sensors and data, especially positioning information. Current indoor positioning systems rely on multiple reference points in obtaining position information. An  efficient approach using portable devices to obtain their 3-dimensional relative position is yet to be developed. In this research, we start from investigating existing positioning techniques. In order to have an efficient way to measure 3D relative position using portable devices, we focus on light emitting diode(LED) and photodiodes(PD). Most current research activities in LED and PD positioning can only be used in limited scenarios with certain given hardware configurations. Specifically, they could only calulcate 2D position data while restricting transmitting and receiving planes to be parralel. We develope a positioning algorithm to abtain 3D position without parallel planes assumption. In addition, the Lambertian order and hardware orientation are flexible with respect to different scenarios. A simulation environment is set up to quantify the performance of the position system in different scenarios. By adjusting system design variables and simulated noise respectively, the influence of each variable can be discussed. We then propose an optimization method to find the optimized system design in specific scenarios. Overall, the proposed algorithm can provide flexible 3D position system design without parallel planes assumption while considering Lambertian order, hardware amount and placing orientation as variables. The simulation environment provides users an approach to evaluate positioning system performance without the cost of setting up the actual hardware system. And the optimized result provides users a guide to construct the hardware system whenever he/she has the need to measure 3D position of multiple objects. 
 
     \vspace{1cm}
     \noindent \textbf{Key Words：Indoor Positioning, Light Positioning, Light-Emitting-Diode, Photodiode, Positioning Algorithm, Lambertian Order, Optimization}
