--- a/ThesisCh/thesisbibnew.bib
+++ b/ThesisCh/thesisbibnew.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-08-14 20:00:50 +0800 
+%% Created for Tiffany at 2022-08-21 17:05:13 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -18,9 +18,9 @@
 	year = {2022}}
 
 @article{multipath_new,
-	author = {W. Gu and M. Aminikashani and P. Deng and M. Kavehrad},
+	author = {W. Gu, M. Aminikashani, P. Deng, and M. Kavehrad},
 	date-added = {2022-08-14 17:34:33 +0800},
-	date-modified = {2022-08-14 17:34:58 +0800},
+	date-modified = {2022-08-21 06:08:09 +0800},
 	doi = {10.1109/JLT.2016.2541659},
 	journal = {Journal of Lightwave Technology},
 	month = {05},
@@ -40,7 +40,7 @@
 @article{omg_new,
 	author = {S. Saab and K. Saab},
 	date-added = {2022-08-05 05:37:19 +0800},
-	date-modified = {2022-08-05 05:37:25 +0800},
+	date-modified = {2022-08-21 06:08:36 +0800},
 	doi = {10.1109/JPHOT.2016.2611441},
 	journal = {IEEE Photonics Journal},
 	number = {5},
@@ -51,9 +51,9 @@
 	bdsk-url-1 = {https://doi.org/10.1109/JPHOT.2016.2611441}}
 
 @article{omg_old,
-	author = {W. Zhang and M. Chowdhury and M. Kavehrad},
+	author = {W. Zhang, M. Chowdhury, and M. Kavehrad},
 	date-added = {2022-08-05 05:36:07 +0800},
-	date-modified = {2022-08-05 05:36:16 +0800},
+	date-modified = {2022-08-21 06:10:40 +0800},
 	doi = {10.1117/1.OE.53.4.045105},
 	journal = {Optical Engineering},
 	month = {04},
@@ -96,9 +96,9 @@
 	year = {2022}}
 
 @article{multipath,
-	author = {J. Barry and J. Kahn and W. Krause and E. Lee and D. Messerschmitt},
+	author = {J. Barry, J. Kahn, W. Krause, E. Lee, and D. Messerschmitt},
 	date-added = {2022-07-17 04:37:47 +0800},
-	date-modified = {2022-07-17 04:37:52 +0800},
+	date-modified = {2022-08-21 06:07:44 +0800},
 	doi = {10.1109/49.219552},
 	journal = {IEEE Journal on Selected Areas in Communications},
 	number = {3},
@@ -109,9 +109,9 @@
 	bdsk-url-1 = {https://doi.org/10.1109/49.219552}}
 
 @article{case:orient,
-	author = {S. Shen and S. Li and S. Heidi},
+	author = {S. Shen, S. Li, and H. Steendam},
 	date-added = {2022-07-17 00:13:49 +0800},
-	date-modified = {2022-07-17 00:13:56 +0800},
+	date-modified = {2022-08-21 06:03:09 +0800},
 	doi = {10.1109/jsac.2020.3000805},
 	journal = {{IEEE} Journal on Selected Areas in Communications},
 	month = {aug},
@@ -126,9 +126,9 @@
 	bdsk-url-2 = {https://doi.org/10.1109/jsac.2020.3000805}}
 
 @article{vlc_adv,
-	author = {P. Pathak and X. Feng and P. Hu and P. Mohapatra},
+	author = {P. Pathak, X. Feng, P. Hu, and P. Mohapatra},
 	date-added = {2022-07-16 04:07:52 +0800},
-	date-modified = {2022-07-16 04:15:55 +0800},
+	date-modified = {2022-08-21 06:24:16 +0800},
 	doi = {10.1109/COMST.2015.2476474},
 	journal = {IEEE Communications Surveys and Tutorials},
 	number = {4},
@@ -139,10 +139,10 @@
 	bdsk-url-1 = {https://doi.org/10.1109/COMST.2015.2476474}}
 
 @inproceedings{case:vlc_mobile,
-	author = {G. del Campo-Jimenez and J. Perandones and F. Lopez-Hernandez},
+	author = {G. Campo-Jimenez, J. Perandones, and F. Lopez-Hernandez},
 	booktitle = {2013 International Conference on Localization and GNSS (ICL-GNSS)},
 	date-added = {2022-07-14 18:23:21 +0800},
-	date-modified = {2022-07-14 18:23:33 +0800},
+	date-modified = {2022-08-21 06:04:04 +0800},
 	doi = {10.1109/ICL-GNSS.2013.6577276},
 	pages = {1-4},
 	title = {A VLC-based beacon location system for mobile applications},
@@ -150,9 +150,9 @@
 	bdsk-url-1 = {https://doi.org/10.1109/ICL-GNSS.2013.6577276}}
 
 @inproceedings{survey_indoor_comparative,
-	author = {M. Al-Ammar and S. Al-Hadhrami and A. Al-Salman and A. Alarifi and H. Al-Khalifa and A. Alnafessah and M. Alsaleh},
+	author = {M. Al-Ammar, S. Al-Hadhrami, A. Al-Salman, A. Alarifi, H. Al-Khalifa, A. Alnafessah, and M. Alsaleh},
 	date-added = {2022-07-14 17:54:32 +0800},
-	date-modified = {2022-07-14 17:55:11 +0800},
+	date-modified = {2022-08-21 06:18:01 +0800},
 	doi = {10.1109/CW.2014.41},
 	month = {10},
 	pages = {245-252},
@@ -163,9 +163,9 @@
 @article{survey:radio,
 	abstract = {The indoor positioning system (IPS) is becoming increasing important in accurately determining the locations of objects by the utilization of micro-electro-mechanical-systems (MEMS) involving smartphone sensors, embedded sources, mapping localizations, and wireless communication networks. Generally, a global positioning system (GPS) may not be effective in servicing the reality of a complex indoor environment, due to the limitations of the line-of-sight (LoS) path from the satellite. Different techniques have been used in indoor localization services (ILSs) in order to solve particular issues, such as multipath environments, the energy inefficiency of long-term battery usage, intensive labour and the resources of offline information collection and the estimation of accumulated positioning errors. Moreover, advanced algorithms, machine learning, and valuable algorithms have given rise to effective ways in determining indoor locations. This paper presents a comprehensive review on the positioning algorithms for indoors, based on advances reported in radio wave, infrared, visible light, sound, and magnetic field technologies. The traditional ranging parameters in addition to advanced parameters such as channel state information (CSI), reference signal received power (RSRP), and reference signal received quality (RSRQ) are also presented for distance estimation in localization systems. In summary, the recent advanced algorithms can offer precise positioning behaviour for an unknown environment in indoor locations.},
 	article-number = {279},
-	author = {T. Geok and K. Aung and M. Sandar Aung and M. Thu Soe and A. Abdaziz and C. Pao Liew and F. Hossain and C. Tso and W. Yong},
+	author = {T. Geok, K. Aung, M. Aung, M. Soe, A. Abdaziz, C. Liew, F. Hossain, C. Tso, and W. Yong},
 	date-added = {2022-07-14 17:28:00 +0800},
-	date-modified = {2022-07-14 17:28:10 +0800},
+	date-modified = {2022-08-21 06:23:18 +0800},
 	doi = {10.3390/app11010279},
 	issn = {2076-3417},
 	journal = {Applied Sciences},
@@ -178,9 +178,9 @@
 	bdsk-url-2 = {https://doi.org/10.3390/app11010279}}
 
 @article{survey:indoor_wayfinding,
-	author = {J. Kunhoth and A. Karkar and S. Al-ma'adeed and A. Al-Ali},
+	author = {J. Kunhoth, A. Karkar, S. Al-ma'adeed, and A. Al-Ali},
 	date-added = {2022-07-14 16:57:41 +0800},
-	date-modified = {2022-07-14 16:57:53 +0800},
+	date-modified = {2022-08-21 06:21:03 +0800},
 	doi = {10.1186/s13673-020-00222-0},
 	journal = {Human-centric Computing and Information Sciences},
 	month = {12},
@@ -190,10 +190,10 @@
 	bdsk-url-1 = {https://doi.org/10.1186/s13673-020-00222-0}}
 
 @inproceedings{GPS_important,
-	author = {S. Yeh and Wu-Hsiao Hsu and Ming-Yang Su and Ching-Hui Chen and Ko-Hung Liu},
+	author = {S. Yeh, W. Hsu, M. Su, C. Chen, and K.Liu},
 	booktitle = {2009 International Conference on Networking, Sensing and Control},
 	date-added = {2022-07-14 16:24:06 +0800},
-	date-modified = {2022-07-14 16:24:14 +0800},
+	date-modified = {2022-08-21 06:05:33 +0800},
 	doi = {10.1109/ICNSC.2009.4919345},
 	pages = {597-601},
 	title = {A study on outdoor positioning technology using GPS and WiFi networks},
@@ -201,10 +201,10 @@
 	bdsk-url-1 = {https://doi.org/10.1109/ICNSC.2009.4919345}}
 
 @inproceedings{outdoor_scenario,
-	author = {G. Angelis and A. Angelis and V. Pasku and A. Moschitta and P. Carbone},
+	author = {G. Angelis, A. Angelis, V. Pasku, A. Moschitta, and P. Carbone},
 	booktitle = {2015 IEEE International Symposium on Systems Engineering (ISSE)},
 	date-added = {2022-07-14 16:12:41 +0800},
-	date-modified = {2022-07-14 16:12:56 +0800},
+	date-modified = {2022-08-21 06:10:17 +0800},
 	doi = {10.1109/SysEng.2015.7302503},
 	pages = {1-6},
 	title = {A hybrid outdoor/indoor Positioning System for IoT applications},
@@ -212,9 +212,9 @@
 	bdsk-url-1 = {https://doi.org/10.1109/SysEng.2015.7302503}}
 
 @article{case:aoa,
-	author = {S. Yang and E. Jeong and S. Han},
+	author = {S. Yang, E. Jeong and S. Han},
 	date-added = {2022-07-11 13:07:36 +0800},
-	date-modified = {2022-07-11 13:07:49 +0800},
+	date-modified = {2022-08-21 05:59:41 +0800},
 	journal = {Electronics Letters},
 	pages = {49-51},
 	title = {Indoor positioning based on received optical power difference by angle of arrival},
@@ -223,9 +223,9 @@
 
 @article{pic:lambertian_3d,
 	abstract = {Visible Light Communication (VLC) has gained popularity in research and business in the last decade. This technology aims to combine lighting and communication into a single device. For now, this technology has been thoroughly studied for an indoor environment, but it is sufficiently mature nowadays to consider its outdoor-environment potentials. The key outdoor challenges are the weather variabilities and smoke particles in cities due to pollution or fires. The aim of this is the study and quantification of the weather and smoke particles&rsquo; impact on a short-range optical communication thanks to a simulator. This article&rsquo;s novelty is the inclusion of the effects of smoke in a short-range outdoor VLC system channel model. This smoke model, which comes from the fire engineering field, states that smoke attenuation is independent of the wavelength, starting from high visibility to 5 m. The visibility represents the distance up to which an object can be distinguished against the background. The effects of fog and smoke are studied in the case of two outdoor VLC scenarios. Smoke and fog models have analogous equations to express the optical attenuation they induce, using the visibility concept. Taking into account the actual light-emitting diode (LED) lamp radiation pattern, the simulator computes the power at the receiver side and the channel attenuation coefficients for a given fog or/and smoke outdoor setting. The main result drawn in this paper is that the channel attenuation levels due to fog and smoke are both in the same order of magnitude, starting from the visibility of about 1 km. The attenuation induced by fog is higher under this threshold of 1 km.},
-	author = {V. Georlette and S. Bette and S. Brohez and R. P{\'e}rez-Jim{\'e}nez and N. Point and V. Moeyaert},
+	author = {V. Georlette, S. Bette, S. Brohez, R. P{\'e}rez-Jim{\'e}nez, N. Point, and V. Moeyaert},
 	date-added = {2022-07-11 08:26:31 +0800},
-	date-modified = {2022-07-11 08:26:40 +0800},
+	date-modified = {2022-08-21 06:12:50 +0800},
 	doi = {10.3390/opt1030020},
 	issn = {2673-3269},
 	journal = {Optics},
@@ -241,24 +241,24 @@
 @article{pic:vlc,
 	author = {T. {\c C}evik and S. Yilmaz},
 	date-added = {2022-07-11 05:13:53 +0800},
-	date-modified = {2022-07-11 05:14:19 +0800},
+	date-modified = {2022-08-21 06:15:13 +0800},
 	journal = {ArXiv},
 	title = {An overview of visible light communication systems},
 	volume = {abs/1512.03568},
 	year = {2015}}
 
 @article{pic:rolling_shutter_case,
-	author = {Y. Kuo and P. Pannuto and K. Hsiao and P. Dutta},
+	author = {Y. Kuo, P. Pannuto, K. Hsiao, and P. Dutta},
 	date-added = {2022-07-11 03:16:36 +0800},
-	date-modified = {2022-07-11 03:16:45 +0800},
+	date-modified = {2022-08-21 06:14:22 +0800},
 	journal = {Proceedings of the 20th annual international conference on Mobile computing and networking},
 	title = {Luxapose: indoor positioning with mobile phones and visible light},
 	year = {2014}}
 
 @article{pic:rolling_shutter,
-	author = {M. Rahman and M. Sejan and J. Kim and W. Chung},
+	author = {M. Rahman, M. Sejan, J. Kim, and W. Chung},
 	date-added = {2022-07-11 03:07:51 +0800},
-	date-modified = {2022-07-11 03:08:01 +0800},
+	date-modified = {2022-08-21 06:13:47 +0800},
 	doi = {10.3390/electronics9101635},
 	journal = {Electronics},
 	month = {10},
@@ -271,15 +271,15 @@
 @inproceedings{case:rfid_1to1,
 	author = {M. Kim and N. Chong},
 	date-added = {2022-07-10 17:41:44 +0800},
-	date-modified = {2022-07-10 17:42:00 +0800},
+	date-modified = {2022-08-21 06:03:22 +0800},
 	title = {Enhancing RFID Location Sensing Using a Dual Directional Antenna},
 	year = {2005}}
 
 @inproceedings{landmarc,
-	author = {L. Ni and Y. Liu and Y. Lau and A. Patil},
+	author = {L. Ni, Y. Liu, Y. Lau, and A. Patil},
 	booktitle = {Proceedings of the First IEEE International Conference on Pervasive Computing and Communications, 2003. (PerCom 2003).},
 	date-added = {2022-07-10 17:25:37 +0800},
-	date-modified = {2022-07-10 17:25:47 +0800},
+	date-modified = {2022-08-21 06:07:11 +0800},
 	doi = {10.1109/PERCOM.2003.1192765},
 	pages = {407-415},
 	title = {LANDMARC: indoor location sensing using active RFID},
@@ -294,9 +294,9 @@
 @article{pic:image_processing,
 	abstract = {Recently, the demand for location-based services using mobile devices in indoor spaces without a global positioning system (GPS) has increased. However, to the best of our knowledge, solutions that are fully applicable to indoor positioning and navigation and ensure real-time mobility on mobile devices, such as global navigation satellite system (GNSS) solutions, cannot achieve remarkable researches in indoor circumstances. Indoor single-shot image positioning using smartphone cameras does not require a dedicated infrastructure and offers the advantages of low price and large potential markets owing to the popularization of smartphones. However, existing methods or systems based on smartphone cameras and image algorithms encounter various limitations when implemented in indoor environments. To address this, we designed an indoor visual positioning system for mobile devices that can locate users in indoor scenes. The proposed method uses a smartphone camera to detect objects through a single image in a web environment and calculates the location of the smartphone to find users in an indoor space. The system is inexpensive because it integrates deep learning and computer vision algorithms and does not require additional infrastructure. We present a novel method of detecting 3D model objects from single-shot RGB data, estimating the 6D pose and position of the camera and correcting errors based on voxels. To this end, the popular convolutional neural network (CNN) is improved by real-time pose estimation to handle the entire 6D pose estimate the location and direction of the camera. The estimated position of the camera is addressed to a voxel to determine a stable user position. Our VPS system provides the user with indoor information in 3D AR model. The voxel address optimization approach with camera 6D position estimation using RGB images in a mobile web environment outperforms real-time performance and accuracy compared to current state-of-the-art methods using RGB depth or point cloud.},
 	article-number = {865},
-	author = {J. Kim and I. Kim and D. Yun and T. Jung and S. Kwon and K. Jung},
+	author = {J. Kim, I. Kim, D. Yun, T. Jung, S. Kwon, and K. Jung},
 	date-added = {2022-07-09 08:08:02 +0800},
-	date-modified = {2022-07-09 08:08:10 +0800},
+	date-modified = {2022-08-21 06:12:07 +0800},
 	doi = {10.3390/electronics11060865},
 	issn = {2079-9292},
 	journal = {Electronics},
@@ -309,9 +309,9 @@
 	bdsk-url-2 = {https://doi.org/10.3390/electronics11060865}}
 
 @article{pic:fingerprinting,
-	author = {T. Tegou and I. Kalamaras and M. Tsipouras and N. Giannakeas and K. Votis and D. Tzovaras},
+	author = {T. Tegou, I. Kalamaras, M. Tsipouras, N. Giannakeas, K. Votis, and D. Tzovaras},
 	date-added = {2022-07-09 07:53:59 +0800},
-	date-modified = {2022-07-09 07:54:10 +0800},
+	date-modified = {2022-08-21 06:11:26 +0800},
 	doi = {10.3390/s19030452},
 	journal = {Sensors},
 	month = {01},
@@ -322,9 +322,9 @@
 	bdsk-url-1 = {https://doi.org/10.3390/s19030452}}
 
 @article{pic:triangulation,
-	author = {H. Hasan and M. Hussein and S. mad saad and M. Dzahir},
+	author = {H. Hasan, M. Hussein, S. mad saad, and M. Mat Dzahir},
 	date-added = {2022-07-09 07:34:13 +0800},
-	date-modified = {2022-07-09 07:34:33 +0800},
+	date-modified = {2022-08-21 06:14:56 +0800},
 	doi = {10.14419/ijet.v7i3.25.17459},
 	journal = {International Journal of Engineering and Technology(UAE)},
 	month = {08},
@@ -335,9 +335,9 @@
 	bdsk-url-1 = {https://doi.org/10.14419/ijet.v7i3.25.17459}}
 
 @article{iot,
-	author = {K. Shafique and B. Khawaja and F. Sabir and S. Qazi and M. Mustaqim},
+	author = {K. Shafique, B. Khawaja, F. Sabir, S. Qazi, and M. Mustaqim},
 	date-added = {2022-07-08 00:55:35 +0800},
-	date-modified = {2022-07-08 00:55:40 +0800},
+	date-modified = {2022-08-21 06:06:22 +0800},
 	doi = {10.1109/ACCESS.2020.2970118},
 	journal = {IEEE Access},
 	pages = {23022-23040},
@@ -348,9 +348,9 @@
 
 @article{case:hypercube,
 	abstract = {An innovative insect-based visual sensor is designed to perform active marker tracking. Without any optics and a field-of-view of about 60$\,^{\circ}$, a novel miniature visual sensor is able to locate flickering markers (LEDs) with an accuracy much greater than the one dictated by the pixel pitch. With a size of only 1 cm3 and a mass of only 0.33 g, the lensless sensor, called HyperCube, is dedicated to 3D motion tracking and fits perfectly with the drastic constraints imposed by micro-aerial vehicles. Only three photosensors are placed on each side of the cubic configuration of the sensing device, making this sensor very inexpensive and light. HyperCube provides the azimuth and elevation of infrared LEDs flickering at a high frequency (&gt;1 kHz) with a precision of 0.5$\,^{\circ}$. The minimalistic design in terms of small size, low mass and low power consumption of this visual sensor makes it suitable for many applications in the field of the cooperative flight of unmanned aerial vehicles and, more generally, robotic applications requiring active beacons. Experimental results show that HyperCube provides useful angular measurements that can be used to estimate the relative position between the sensor and the flickering infrared markers.},
-	author = {T. Raharijaona and P. Mignon and R. Juston and L. Kerhuel and S. Viollet},
+	author = {T. Raharijaona, P. Mignon, R. Juston, L. Kerhuel, and S. Viollet},
 	date-added = {2022-06-13 23:04:06 +0800},
-	date-modified = {2022-06-13 23:04:12 +0800},
+	date-modified = {2022-08-21 06:01:39 +0800},
 	doi = {10.3390/s150716484},
 	issn = {1424-8220},
 	journal = {Sensors},
@@ -365,9 +365,9 @@
 	bdsk-url-2 = {https://doi.org/10.3390/s150716484}}
 
 @article{case:cart2d,
-	author = {X. Yu and J. Wang and H. Lu},
+	author = {X. Yu, J. Wang, H. Lu},
 	date-added = {2022-06-13 23:03:26 +0800},
-	date-modified = {2022-06-13 23:03:33 +0800},
+	date-modified = {2022-08-21 06:00:10 +0800},
 	doi = {10.1109/JPHOT.2018.2848947},
 	journal = {IEEE Photonics Journal},
 	number = {6},
@@ -378,9 +378,9 @@
 	bdsk-url-1 = {https://doi.org/10.1109/JPHOT.2018.2848947}}
 
 @article{case:ml,
-	author = {A. Bakar and T. Glass and H. Tee and F. Alam M. and Legg},
+	author = {A. Bakar, T. Glass, H. Tee, F. Alam, and M. Legg},
 	date-added = {2022-06-13 22:57:06 +0800},
-	date-modified = {2022-06-13 22:57:11 +0800},
+	date-modified = {2022-08-21 06:02:25 +0800},
 	doi = {10.1109/TIM.2020.3024526},
 	journal = {IEEE Transactions on Instrumentation and Measurement},
 	pages = {1-12},
@@ -390,9 +390,9 @@
 	bdsk-url-1 = {https://doi.org/10.1109/TIM.2020.3024526}}
 
 @article{case:3d_layers,
-	author = {S. Yang and H. Kim and Y. Son and S. Han},
+	author = {S. Yang, H. Kim, Y. Son, and S. Han},
 	date-added = {2022-06-13 22:56:43 +0800},
-	date-modified = {2022-06-13 22:56:52 +0800},
+	date-modified = {2022-08-21 05:59:05 +0800},
 	doi = {10.1109/JLT.2014.2327623},
 	journal = {Journal of Lightwave Technology},
 	number = {14},
@@ -404,10 +404,10 @@
 
 @inproceedings{case:cart3d,
 	abstract = {We propose a novel visible light positioning (VLP) system based on a single light emitting diode (LED) using the symmetrical receiver. In the proposed receiver, a horizontal photodetector (PD) is located at the center and four tilted PDs are located symmetrically around the center. Based on the received signal strength (RSS), the high accuracy two-dimensional (2-D) positioning can be easily achieved and the average error is 2.32 cm when the PDs' polar angles are 20{\textdegree}. Moreover, the 3-D location can also be estimated if a reference point is provided and the average error of the 3-D positioning is 3.42 cm. The proposed VLP system avoids the inter-cell interference (ICI) caused by multiple transmitters and achieves the positioning regardless of LED's and PDs' characteristics, which can be easily applied in scenarios with limited LEDs.},
-	author = {X. Yu and J. Wang and H. Lu},
+	author = {X. Yu, J. Wang and H. Lu},
 	booktitle = {Asia Communications and Photonics Conference (ACP) 2018},
 	date-added = {2022-06-13 22:54:19 +0800},
-	date-modified = {2022-06-13 22:54:39 +0800},
+	date-modified = {2022-08-21 06:00:33 +0800},
 	journal = {Asia Communications and Photonics Conference (ACP) 2018},
 	keywords = {Image sensors; Interference; Light emitting diodes; Optical receivers; Photodetectors; Visible light},
 	pages = {Su2A.50},
@@ -418,10 +418,10 @@
 	bdsk-url-1 = {http://opg.optica.org/abstract.cfm?URI=ACPC-2018-Su2A.50}}
 
 @inproceedings{decoding,
-	author = {P. Lou and H. Zhang and X. Zhang and M. Yao and Z. Xu},
+	author = {P. Lou, H. Zhang, X. Zhang, M. Yao, and Z. Xu},
 	booktitle = {2012 1st IEEE International Conference on Communications in China Workshops (ICCC)},
 	date-added = {2022-06-13 21:15:25 +0800},
-	date-modified = {2022-06-13 21:15:42 +0800},
+	date-modified = {2022-08-21 06:04:48 +0800},
 	doi = {10.1109/ICCCW.2012.6316475},
 	pages = {59-63},
 	title = {Fundamental analysis for indoor visible light positioning system},
@@ -431,9 +431,9 @@
 @article{vlc,
 	abstract = {Visible light communication (VLC) is a new paradigm that could revolutionise the future of wireless communication. In VLC, information is transmitted through modulating the visible light spectrum (400--700 nm) that is used for illumination. Analytical and experimental work has shown the potential of VLC to provide high-speed data communication with the added advantage of improved energy efficiency and communication security/privacy. VLC is still in the early phase of research. There are fewer review articles published on this topic mostly addressing the physical layer research. Unlike other reviews, this article gives a system prespective of VLC along with the survey on existing literature and potential challenges toward the implementation and integration of VLC.},
 	article-number = {1153},
-	author = {S. Rehman and S. Ullah and P. Chong and S. Yongchareon and C. Komosny},
+	author = {S. Rehman, S. Ullah, P. Chong, S. Yongchareon, and D. Komosny},
 	date-added = {2022-06-13 21:09:57 +0800},
-	date-modified = {2022-06-13 21:10:08 +0800},
+	date-modified = {2022-08-21 06:23:51 +0800},
 	doi = {10.3390/s19051153},
 	issn = {1424-8220},
 	journal = {Sensors},
@@ -455,11 +455,11 @@
 
 @incollection{si_pd,
 	address = {Rijeka},
-	author = {A. Sood and J. Zeller and R. Richwine and Y. Puri and H. Efstathiadis and P. Haldar and N. Dhar and D. Polla},
+	author = {A. Sood, J. Zeller, R. Richwine, Y. Puri, H. Efstathiadis, P. Haldar, N. Dhar, and D. Polla},
 	booktitle = {Advances in Optical Fiber Technology},
 	chapter = {10},
 	date-added = {2022-04-11 17:14:27 +0800},
-	date-modified = {2022-04-11 17:14:45 +0800},
+	date-modified = {2022-08-21 06:16:43 +0800},
 	doi = {10.5772/59065},
 	editor = {Moh Yasin and Hamzah Arof and Sulaiman Wadi Harun},
 	publisher = {IntechOpen},
@@ -471,7 +471,7 @@
 	abstract = {Using the most recent composite time series of total solar irradiance spaceborne measurements, a solar constant value of 1366.1 Wm−2 is confirmed, and simple quadratic expressions are proposed to predict its daily value from the Zurich sunspot number, the MgII index, or the 10.7 cm radio flux index. Whenever these three indices are available on a daily basis (since 1978), it is possible to predict the sun's irradiance within 0.1% on average, as accurately as current measurements. Based on this value of the solar constant, an improved approximation of the extraterrestrial solar spectrum from 0 to 1000 μm is proposed. It is obtained by dividing the spectrum into nine bands and selecting representative (and recent) spectra, as well as appropriate scaling coefficients for each band. Comparisons with frequently used spectra are discussed, confirming previous findings of the literature. This synthetic and composite spectrum is proposed at 0.5-nm intervals in the UV (280--400 nm), 1-nm intervals between 0--280 and 400--1705 nm, 5-nm intervals between 1705 and 4000 nm, and progressively larger intervals beyond 4 μm, for a total of 2460 wavelengths.},
 	author = {C. Gueymard},
 	date-added = {2022-04-11 16:12:57 +0800},
-	date-modified = {2022-04-11 16:13:22 +0800},
+	date-modified = {2022-08-21 05:58:21 +0800},
 	doi = {https://doi.org/10.1016/j.solener.2003.08.039},
 	issn = {0038-092X},
 	journal = {Solar Energy},
@@ -494,15 +494,15 @@
 @misc{book_electromagnetic,
 	author = {D. Griffiths},
 	date-added = {2022-04-11 13:48:51 +0800},
-	date-modified = {2022-04-11 13:49:00 +0800},
+	date-modified = {2022-08-21 05:57:53 +0800},
 	publisher = {American Association of Physics Teachers},
 	title = {Introduction to electrodynamics},
 	year = {2005}}
 
 @article{survey_rfid,
-	author = {A. Motroni and A. Buffi and P. Nepa},
+	author = {A. Motroni, A. Buffi, and P. Nepa},
 	date-added = {2022-04-11 13:18:56 +0800},
-	date-modified = {2022-04-11 13:19:12 +0800},
+	date-modified = {2022-08-21 06:20:34 +0800},
 	doi = {10.1109/access.2021.3052316},
 	journal = {{IEEE} Access},
 	pages = {17921--17942},
@@ -515,9 +515,9 @@
 	bdsk-url-2 = {https://doi.org/10.1109/access.2021.3052316}}
 
 @article{pic:multipath,
-	author = {Kumar, G. and Rao, G. and Kumar, M.},
+	author = {G. Kumar, G. Rao, and M. Kumar},
 	date-added = {2022-04-11 13:01:15 +0800},
-	date-modified = {2022-04-11 13:01:30 +0800},
+	date-modified = {2022-08-21 06:13:14 +0800},
 	doi = {10.4236/pos.2013.42019},
 	journal = {Positioning},
 	month = {01},
@@ -545,9 +545,9 @@
 	year = 2021}
 
 @inproceedings{Spectrum,
-	author = {Y. Abdelrahman and A. Schmidt and P. Knierim},
+	author = {Y. Abdelrahman, A. Schmidt, and P. Knierim},
 	date-added = {2022-04-11 12:13:32 +0800},
-	date-modified = {2022-04-11 12:13:46 +0800},
+	date-modified = {2022-08-21 06:17:08 +0800},
 	doi = {10.1145/3123024.3124450},
 	month = {09},
 	pages = {1067-1071},
@@ -556,9 +556,9 @@
 	bdsk-url-1 = {https://doi.org/10.1145/3123024.3124450}}
 
 @article{survey_ultrasonic,
-	author = {Z. Qiu and Y. Lu and Z. Qiu},
+	author = {Z. Qiu, Y. Lu, and Z. Qiu},
 	date-added = {2022-04-11 08:31:12 +0800},
-	date-modified = {2022-04-11 08:31:26 +0800},
+	date-modified = {2022-08-21 06:21:24 +0800},
 	journal = {Micromachines},
 	number = {4},
 	pages = {520},
@@ -568,9 +568,9 @@
 	year = {2022}}
 
 @article{survey_light2018,
-	author = {Y. Zhuang and L. Hua and L. Qi and J. Yang and P. Cao and Y. Cao and Y. Wu and J. Thompson and H. Haas},
+	author = {Y. Zhuang, L. Hua, L. Qi, J. Yang, P. Cao, Y. Cao, Y. Wu, J. Thompson, and H. Haas},
 	date-added = {2022-04-11 06:37:23 +0800},
-	date-modified = {2022-04-11 06:37:32 +0800},
+	date-modified = {2022-08-21 06:19:44 +0800},
 	doi = {10.1109/COMST.2018.2806558},
 	journal = {IEEE Communications Surveys Tutorials},
 	number = {3},
@@ -581,9 +581,9 @@
 	bdsk-url-1 = {https://doi.org/10.1109/COMST.2018.2806558}}
 
 @article{survey_light2020,
-	author = {M. Maheepala and A. Kouzani and M. Joordens},
+	author = {M. Maheepala, A. Kouzani, and M. Joordens},
 	date-added = {2022-04-11 06:36:38 +0800},
-	date-modified = {2022-04-11 06:36:48 +0800},
+	date-modified = {2022-08-21 06:20:11 +0800},
 	doi = {10.1109/JSEN.2020.2964380},
 	journal = {IEEE Sensors Journal},
 	number = {8},
@@ -595,9 +595,9 @@
 	bdsk-url-1 = {https://doi.org/10.1109/JSEN.2020.2964380}}
 
 @article{survey_indoor2018,
-	author = {F. Zafari and A. Gkelias and K. Leung},
+	author = {F. Zafari, A. Gkelias, and K. Leung},
 	date-added = {2022-04-11 06:34:14 +0800},
-	date-modified = {2022-04-11 06:34:28 +0800},
+	date-modified = {2022-08-21 06:18:46 +0800},
 	journal = {IEEE Communications Surveys \& Tutorials},
 	pages = {2568-2599},
 	title = {A Survey of Indoor Localization Systems and Technologies},
@@ -608,16 +608,16 @@
 	author = {W. Mccluney},
 	date = {2015/11/01},
 	date-added = {2022-03-30 23:41:49 +0800},
-	date-modified = {2022-03-30 23:43:11 +0800},
+	date-modified = {2022-08-21 06:15:23 +0800},
 	month = {11},
 	title = {Introduction to Radiometry and Photometry 2nd ed: Title Page \& Table of Contents},
 	year = {2015}}
 
 @inproceedings{survey_indoor2014,
-	author = {L. Mainetti and L. Patrono and I. Sergi},
+	author = {L. Mainetti, L. Patrono, and I. Sergi},
 	booktitle = {2014 22nd International Conference on Software, Telecommunications and Computer Networks (SoftCOM)},
 	date-added = {2022-02-23 13:00:06 +0800},
-	date-modified = {2022-04-11 06:34:36 +0800},
+	date-modified = {2022-08-21 06:18:23 +0800},
 	doi = {10.1109/SOFTCOM.2014.7039067},
 	pages = {111-120},
 	title = {A survey on indoor positioning systems},
