--- a/ThesisCh/FrontFile/acknowledgementsCH.tex
+++ b/ThesisCh/FrontFile/acknowledgementsCH.tex
@@ -1,5 +1,30 @@
 \begin{acknowledgementsCH}
 
-    這裡是致謝
+在風和日麗的澎湖夜晚，終於好好回顧過去兩年的碩班生活，竟然就這樣輪到我寫致謝了！
+
+大四因緣際會進入到鄭榮和教授的實驗室做專題，也就這樣遇到了詹魁元老師，並成功被收入實驗室。雖然一開始的時間很混亂，在水源實驗室跟著劉書廷大神的腳步，修卡車接電路做校正和測試，什麼都會了一點但也什麼都不會。在水源實驗室受鄭老師指導的過程中，每天都和學長們一起與時間賽跑，在高張力的環境下無時無刻都在吸取經驗。在這同時，老師把我拖進了多機器人和外骨骼組，也指派了我做量測的方向，碩士生活的前一年，就是什麼東西都在碰，但都只碰了皮毛，還是什麼都不會，對於自己的研究走向一點把握也沒有。
+
+碩二仍舊不停的懷疑自我，幾乎每次和老師討論都會超過時間，一次一次的努力把研究的雛形捏出來，逐漸將研究訂在現在這個方向，然後一次一次跟老師說我好爛做不到。雖然開始得很晚，又摸索了很久，這段過程中老師真的給我滿滿的鼓勵與打氣，各種陪我聊天說故事，讓我開完會都覺得自己棒到一個不行。真的很謝謝老師這兩年的指導與陪伴，就像老師無數次強調研究生需要找尋自己的題目，老師帶給我更多的是如何面對開放式問題甚至沒有問題時摸索解答，以及如何用更廣的視野回答人生的課題，在我面對各種低潮時給予安慰與支持，是個無比溫暖的人生導師。
+
+最感謝的還是我的小夥伴們，冠成、詔東與昱凡同志，從碩一進入實驗室到畢業都給了我滿滿的歡樂。
+我的老大東哥，帶我體驗夜奔辛亥路的木柵王者，總是吵到不行鬧到不行瘋到不行，一肩扛起實驗室康樂股長，要認真要玩都妥妥貼貼，即便壓力很大還是幫我們擋掉了一堆傷害，在搞事的皮囊下是個暖男。
+我的偶像冠成，從大一認識你始終披著神祕的面紗，始終如一保持著自己的步調，思考著哲學問題、吸取各種新奇的知識，筆直朝台科大走去的你帥到掉渣，值得畏手畏腳的我無數個Orz。
+我的超人昱凡一直都帶給我滿滿的窩心，尤其碩二我閉關的時期總是不厭其煩的幫我傳遞訊息，如果沒有妳我大概就默默一個人走完我的碩士生活。很開心有台南口味手搖小夥伴，無論是吃的開心的難過的都有妳分享，逛街廢片生活小廢事也有你陪伴，期望早日見到麻糬。
+
+還有許多SoLab成員們都豐富了我的碩士生活，實驗室的博學擔當彥智學長，機車海放擔當柏賢大哥，躺椅縛靈教主俊杰，口試時間楷模晉毅，唯一暖心到不行的學姊雅媛，強到無法無天的昱霖。
+還有小小夥伴們，即使我超少出現，還是對我很好，感謝若瑄讓孤單的我在碩二的日子有了研究小夥伴，什麼都會的怡萱當我的維基百科與抬頭捷教練，易玄讓我領悟基隆嶼的陡，重叡讓我見識食物的多樣性，啟瑞一人把我完全無法理解的水源扛下。差點忘記卡在中間的噴血人冠賢，理應當個學弟但總幫我解決有的沒的一堆事情，請小心安全。
+
+不得不說這兩年間的際遇都十分幸運，能夠與大家攜手同行，能夠進到一個可以一起衝陽明山北海岸宜蘭基隆嶼還有規劃澎湖畢旅的實驗室，認識這麼多怪到不行的人，大概上輩子真的做了很多好事。
+
+最後感謝我的家人，感謝博學多聞的爸爸、家庭小精靈媽媽、加班比輪班還誇張的建築師哥哥，感謝父母把我養得如此滋潤肥美，在遇到人生困境甚至研究瓶頸時能夠適時拉我一把，提供我無憂無慮的讀書環境，雖然總懷疑我畢不了業但還是放手讓我去混。當然還有最肥美的虎斑瓜，在我無數個通宵的夜晚在旁邊睡到打呼，襯托我的可悲。還有一個希望陪我熬夜但總睡死的男友，說要一起運動減肥但肚子凸出的速度讓我望塵莫及，謝謝你無論何時總是相信我做得到，拎著焦慮狂躁的我看山看海看電視看貓貓，也謝謝你的父母、阿姨們、阿公都提供給我滿滿的拍打餵食。
+
+總而言之，感謝老師、夥伴們、學長姊、學弟妹、家人們、朋友們以及男友，這兩年途中的支持，有了你們的陪伴才完整了我的碩士生活，無論是在下雨水會滴到高壓電箱還有各種大到嚇死人的重機械的水源實驗室，還是壁癌比牆壁多插座會噴水的工綜，還是一個人在家面對太陽升起的閉關生活，回頭看這兩年的生活，那些歡笑與溫暖還是滿滿的蓋掉了辛酸血淚，期望大家都平安健康，在未來的路上過得幸福順利！
+
+\begin{flushright}
+    李亭宜\  謹誌於\\
+    國立台灣大學\  機械工程學系\\
+    中華民國一百一十一年九月
+ \end{flushright}
+
 
  \end{acknowledgementsCH}
